<resources>
    <string name="app_name" translatable="false">Monac</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="day" translatable="false">24h</string>
    <string name="week" translatable="false">7d</string>
    <string name="month" translatable="false">1m</string>
    <string name="quorter" translatable="false">3m</string>
    <string name="year" translatable="false">1y</string>
    <string name="all" translatable="false">All</string>
    <string name="back_button">back button</string>
    <string name="new_transaction">New transaction</string>
    <string name="details">Details</string>
    <string name="type">Type</string>
    <string name="expenses">Expenses</string>
    <string name="earnings">Earnings</string>
    <string name="sum">Sum</string>
    <string name="hint_sum">Enter sum</string>
    <string name="category">Category</string>
    <string name="add_new_category_button">add new category button</string>
    <string name="hint_category">Category name</string>
    <string name="date_and_time">Date and time</string>
    <string name="comments" translatable="false">Комментарии</string>
    <string name="hint_comments">Enter comment</string>
    <string name="button_for_aproving_new_transaction">button for aproving new transaction</string>
    <string name="avatar_for_category">avatar for category</string>
    <string name="button_for_settings_fragment">button for settings fragment</string>
    <string name="transactions">Transactions</string>
    <string name="recent">Recent</string>
    <string name="button_for_adding_new_transaction">button for adding new transaction</string>
    <string name="card_statistics">Card statistics</string>
    <string name="operations">Operations</string>
    <string name="limit_settings">Limit settings</string>
    <string name="enter_password">Enter password</string>
    <string name="limit_usd">Limit ($)</string>
    <string name="hint_limit">Enter limit</string>
    <string name="limit_rub">Limit (₽)</string>
    <string name="limit_eur">Limit (€)</string>
    <string name="save">Save</string>
    <string name="user_name">User name</string>
    <string name="log_in">Log in</string>
    <string name="new_acc">New account</string>
    <string name="name">Name</string>
    <string name="hint_enter_name" translatable="false">Введите имя</string>
    <string name="password">Password</string>
    <string name="standart">Standard</string>
    <string name="child">Child</string>
    <string name="create_acc">Create account</string>
    <string name="new_card">New card</string>
    <string name="color_picker_wheel">color picker wheel</string>
    <string name="title">Title</string>
    <string name="hint_title">Enter title</string>
    <string name="last_4_card_numbers">Last 4 card numbers</string>
    <string name="hint_number" translatable="false">****</string>
    <string name="payment_instrument">Payment instrument</string>
    <string name="mastercard" translatable="false">MasterCard</string>
    <string name="mir">Mir</string>
    <string name="currency">Currency</string>
    <string name="usd" translatable="false">$</string>
    <string name="rub" translatable="false">₽</string>
    <string name="eur" translatable="false">€</string>
    <string name="button_for_saving_new_card">button for saving new card</string>
    <string name="new_transaction_type">New transaction type</string>
    <string name="phone">Phone</string>
    <string name="hint_phone" translatable="false">_ ___ ___ __ __</string>
    <string name="button_for_saving_new_category_type">button for saving new category type</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="update_password">Update password</string>
    <string name="settings">Settings</string>
    <string name="acc">Account</string>
    <string name="acc_type" translatable="false">Тип учетной записи</string>
    <string name="entrance_password">Entrance password</string>
    <string name="parental_control">Parental control</string>
    <string name="card_limit">Card limit</string>
    <string name="common">Common</string>
    <string name="language">Language</string>
    <string name="russian">Russian</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="dangerous_zone">Dangerous zone!</string>
    <string name="log_out">Log out</string>
    <string name="enter_account">Enter account</string>
    <string name="marker_of_payment_instrument">marker of payment instrument</string>
    <string name="plus" translatable="false">+</string>
    <string name="adding_image">adding image</string>
    <string name="limit_setted">Limit set</string>
    <string name="limit_error">Failed to set limit</string>
    <string name="fill_all_fields">Fill in all the details please</string>
    <string name="please_enter_password">Please enter a password</string>
    <string name="password_error">Looks like the password doesn\'t match</string>
    <string name="registration_succeed">Registration completed successfully</string>
    <string name="registration_error">Failed to register user</string>
    <string name="password_changed">Password changed</string>
    <string name="password_change_error">Failed to change password</string>
    <string name="card_added">card added</string>
    <string name="card_add_error">Failed to add card</string>
    <string name="added_successfully">Successfully added</string>
    <string name="add_error">Failed to add</string>
    <string name="add_operation">operation added</string>
    <string name="add_operation_error">Failed to add operation</string>
    <string name="hello">Hello, \</string>
    <string name="removed_from_list">Removed from the list</string>
    <string name="restore">Restore</string>
    <string name="light">Light</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>