<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    app:layoutDescription="@xml/fragment_new_card_type_scene">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="@dimen/basic_margin"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/tv_header"
            style="@style/TextHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basic_margin"
            android:text="@string/new_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_back"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_color_picker"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/basic_margin"
        android:src="@drawable/color_picker"
        app:layout_constraintDimensionRatio="1:1"
        android:contentDescription="@string/color_picker_wheel" />


    <TextView
        android:id="@+id/tv_details"
        style="@style/TextHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/basic_margin"
        android:text="@string/details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_color_picker" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_details">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextMid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/basic_margin"
                android:text="@string/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/basic_margin"
                android:background="@drawable/card_add"
                app:layout_constraintTop_toBottomOf="@+id/tv_name">

                <EditText
                    android:id="@+id/et_name"
                    style="@style/TextHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/basic_margin"
                    android:background="@null"
                    android:gravity="center|bottom"
                    android:hint="@string/hint_title"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:textColor="@color/main_text_color"
                    android:textColorHint="@color/picker_text_off"
                    android:textCursorDrawable="@drawable/cursor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAutofill="no" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_card_number"
                style="@style/TextMid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/basic_margin"
                android:text="@string/last_4_card_numbers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_name" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/basic_margin"
                android:background="@drawable/card_add"
                app:layout_constraintTop_toBottomOf="@+id/tv_card_number">

                <EditText
                    android:id="@+id/et_card_number"
                    style="@style/TextHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/basic_margin"
                    android:background="@null"
                    android:gravity="center|bottom"
                    android:hint="@string/hint_number"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:textColor="@color/main_text_color"
                    android:textColorHint="@color/picker_text_off"
                    android:textCursorDrawable="@drawable/cursor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAutofill="no" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_instrument"
                style="@style/TextMid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/basic_margin"
                android:text="@string/payment_instrument"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_card_number" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_instrument"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/basic_margin"
                android:background="@drawable/card_add"
                app:layout_constraintTop_toBottomOf="@+id/tv_instrument">

                <TextView
                    android:id="@+id/tv_mastercard"
                    style="@style/TextHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/basic_margin"
                    android:gravity="center"
                    android:text="@string/mastercard"
                    android:textColor="@color/picker_text_on"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_mir"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_mir"
                    style="@style/TextHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/basic_margin"
                    android:gravity="center"
                    android:text="@string/mir"
                    android:textColor="@color/picker_text_off"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_mastercard"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_currency"
                style="@style/TextMid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/basic_margin"
                android:text="@string/currency"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_instrument" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/basic_margin"
                android:background="@drawable/card_add"
                app:layout_constraintTop_toBottomOf="@+id/tv_currency">

                <TextView
                    android:id="@+id/tv_usd"
                    style="@style/TextHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/basic_margin"
                    android:gravity="center"
                    android:text="@string/usd"
                    android:textColor="@color/picker_text_on"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_rub"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_rub"
                    style="@style/TextHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/basic_margin"
                    android:gravity="center"
                    android:text="@string/rub"
                    android:textColor="@color/picker_text_off"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_eur"
                    app:layout_constraintStart_toEndOf="@id/tv_usd"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_eur"
                    style="@style/TextHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/basic_margin"
                    android:gravity="center"
                    android:text="@string/eur"
                    android:textColor="@color/picker_text_off"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_rub"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_comments"
                style="@style/TextMid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/basic_margin"
                android:text="@string/comments"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_currency" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/basic_margin"
                android:background="@drawable/card_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_comments">

                <EditText
                    android:id="@+id/et_comments"
                    style="@style/TextSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/basic_margin"
                    android:background="@null"
                    android:hint="@string/hint_comments"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:textColor="@color/main_text_color"
                    android:textColorHint="@color/picker_text_off"
                    android:textCursorDrawable="@drawable/cursor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAutofill="no" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/basic_margin"
        android:backgroundTint="@color/orange_400"
        android:src="@drawable/done"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/button_for_saving_new_card" />
</androidx.constraintlayout.motion.widget.MotionLayout>